--- a/www/css/style.css
+++ b/www/css/style.css
@@ -359,3 +359,39 @@ footer .page i {
 @keyframes spin {
     100% {transform: rotate(720deg)}
 }
+
+#newUpdateBox {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1em;
+    padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 1em;
+    width: 90%;
+    overflow: hidden;
+    gap: 1em;
+    backdrop-filter: blur(1em);
+}
+
+#newUpdateBox h3 {
+    background: black;
+    color: white;
+    width: 100%;
+    padding: .5em;
+    text-align: center;
+    border-radius: 0 0 .5em .5em;
+}
+
+#newUpdateBox .update-button {
+    background: black;
+    color: white;
+    width: 100%;
+    padding: .5em;
+    text-align: center;
+    font-weight: 650;
+    border-radius: .5em;
+}
